--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,10 +37,10 @@
         <%for (let i of taskList){%>
             <li>
                 <div id="task-details">
-                    <p class="task">Task Description:<%= i.task%></p>
-                    <p class="time">Time:<%= i.time%></p>
-                    <p class="date">Date:<%= i.date%></p>
-                    <p class="category">Category:<%= i.category%></p>
+                    <p class="Task">Task Description:<%= i.task%></p>
+                    <p class="Time">Time:<%= i.time%></p>
+                    <p class="Date">Date:<%= i.date%></p>
+                    <p class="Category">Category:<%= i.category%></p>
 
                 </div>
                 
