--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,46 @@
 body{
     text-align: center;
 }
+#task-list{
+    list-style: none;
+}
+#task-details{
+    
+    margin:auto;
+    width:80%;
+    height:10%;
+    box-shadow: 1px 1px 10px 1px;
+}
+li{
+    margin-bottom: 3%;
+}
+#tasks{
+    display: flex;
+    justify-content: space-evenly;
+}
+#due-date-time{
+    display: flex;
+    justify-content: space-evenly;
+}
+#task-details:hover{
+    opacity:0.6;
+}
+#delete-icon{
+    display: inline-block;
+    width:5%;
+    visibility: hidden;
+}
+#task-details:hover #delete-icon{
+    visibility: visible;
+}
+#task-description{
+    display: inline-block;
+    width:90%;
+}
+#task-desc-form{
+
+}
+#form{
+    display:flex;
+    justify-content: space-evenly;
+}
