--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
           <%= title %>
         </title>
         <link type="text/css" rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <%- style %>
     </head>
     <body>
