--- a/views/add_new_task.ejs
+++ b/views/add_new_task.ejs
@@ -46,7 +46,7 @@
         </div>
         
         <div id="submit-btn">
-            <button type="submit">Add Task</button>
+            <button type="submit" class="button">Add Task</button>
         </div>
     </form>
 
