--- a/assets/css/add_new_task.css
+++ b/assets/css/add_new_task.css
@@ -1,5 +1,6 @@
 body{
     text-align: center;
+    background-image:linear-gradient(#4AC29A,#BDFFF3);
 }
 #form{
     display:flex;
@@ -11,4 +12,29 @@ body{
     position: fixed;
     top:3%;
     left:0%;
+    
+}
+#back-btn i{
+    color:red;
+
+}
+#back-btn i:hover{
+    color:#8C0000;
+}
+.button{
+    background-color: #e25252;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+.button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
