--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,16 @@
 body{
     text-align: center;
+    background-image:linear-gradient(#a8ff78,#78ffd6);
 }
+h1 a i{
+    text-decoration: none;
+    color:red;
+    font-size:40px;
+}
+h1 a i:hover{
+    color:#8C0000;
+}
+
 #task-list{
     list-style: none;
 }
@@ -10,10 +20,16 @@ body{
     width:80%;
     height:10%;
     box-shadow: 1px 1px 10px 1px;
+    background-color: #FFE227;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 li{
     margin-bottom: 3%;
+    list-style: none;
+    
 }
+
 #tasks{
     display: flex;
     justify-content: space-evenly;
@@ -23,7 +39,8 @@ li{
     justify-content: space-evenly;
 }
 #task-details:hover{
-    opacity:0.6;
+    /*opacity:0.6;*/
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #delete-icon{
     display: inline-block;
@@ -37,9 +54,7 @@ li{
     display: inline-block;
     width:90%;
 }
-#task-desc-form{
 
-}
 #form{
     display:flex;
     justify-content: space-evenly;
