--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -40,18 +40,21 @@ li{
     justify-content: space-evenly;
 }*/
 #Category{
-    position:relative;
-    /*right:45%;*/
+    position: relative;
+    border-radius: 4px 4px 4px 4px;
+    background-color:#FCF8E8;
 }
 #due-date-time{
-    position:relative;
+    
     /*right:40%;*/
     opacity:0.7;
 }
 #sidebar{
+    margin:1% 0;
     left:10%;
 }
 #Task{
+    margin:2% 0;
     position: relative;
     left:20%;
     font-weight: 600;
@@ -72,7 +75,7 @@ li{
     visibility: visible;
 }
 #task-description{
-    margin:2% 0;
+    
     display: flex;
     /*justify-content: space-evenly;*/
     width:90%;
